Fix align-items on mobile

--- a/themes/bandarlog/static/css/bandarlog.css
+++ b/themes/bandarlog/static/css/bandarlog.css
@@ -185,7 +185,6 @@ legend { /* = h2 */
 }
 
 .pure-form .pure-input {
-    align-items: baseline;
     border-radius: 4px;
     border: 1px solid #ccc;
     box-shadow: inset 0 1px 3px #ddd;
